--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
     "drag-drop-touch": "^1.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
